--- a/README.org
+++ b/README.org
@@ -90,10 +90,10 @@ After you manually edit the package list(s) you may:
 #+end_src 
 
 * TO-DOs
-- [ ] add license
 - [ ] document alternative software
 - [ ] explain ¿why?
 - [ ] genrerate packages.txt in config directory with -g command
+- [X] add license
 - [X] make $HOSTNAME.txt in config directory optional
 - [X] more examples (use with scripts)
 - [X] create an AUR package
