--- a/README.org
+++ b/README.org
@@ -125,8 +125,9 @@ After you manually edit the package list(s) you may:
 #+end_src 
 
 * TO-DOs
+- [ ] feature: when no lists are present and =-n= should ask to create =.config/pipac/packages.txt=
 - [ ] feature: configuration file (select package manager, select custom lists, use default lists y/n)
-- [ ] feature: run yay -Yc (or equivalent) after pruning
+- [X] feature: run yay -Yc (or equivalent) after pruning (=-o= flag)
 - [X] documentation: explain ¿why?
 - [X] documentation: document alternative software
 - [X] feature: ask for confirmation before =-D= operations
